--- a/ProductManager/src/main/resources/application.properties
+++ b/ProductManager/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/sales_db
 spring.datasource.username=root
-spring.datasource.password=100%Pinkahmyo
+spring.datasource.password=password
 spring.jpa.open-in-view=true
 logging.level.root=WARN
 
